[package]
name = "tytimers"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
glib = "0.20"
gtk4 = { version = "0.9", features = ["v4_10"] }
gtk4-layer-shell = "0.5"
gstreamer = "0.23"
gstreamer-app = "0.23"
ksni = { version = "0.3", features = ["blocking"] }
libc = "0.2"
